part6/sample-clusterip-vip.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-clusterip-vip
spec:
  type: ClusterIP
  clusterIP: 10.11.253.81
  ports:
    - port: 8080
      targetPort: 80
      name: "http-port"
      protocol: "TCP"
  selector:
    app: sample-app
