part6/sample-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-clusterip
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: "http-port"
      protocol: "TCP"
      targetPort: 80
  selector:
    app: sample-app
