part6/sample-externalip.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-externalip
spec:
  type: ClusterIP
  externalIPs:
    - 10.240.0.7
    - 10.240.0.8
  ports:
    - port: 8080
      targetPort: 80
      name: "http-port"
      protocol: "TCP"
  selector:
    app: sample-app
