part6/sample-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-headless
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 80
      targetPort: 80
      protocol: "TCP"
      name: "http-port"
  selector:
    app: sample-app
