part6/sample-ingress-apps.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sample-ingress-svc-1
spec:
  type: NodePort
  ports:
  - port: 8888
    targetPort: 80
    name: "http-port"
    protocol: "TCP"
  selector:
    ingress-app: sample1
---
apiVersion: v1
kind: Pod
metadata:
  name: sample-ingress-apps-1
  labels:
    name: sample1
spec:
  containers:
  - name: nginx-containar
    image: nginx:1.15
    ports:
      - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: sample-ingress-svc-2
spec:
  type: NodePort
  ports:
  - port: 8888
    targetPort: 80
    name: "http-port"
    protocol: "TCP"
  selector:
    ingress-app: sample2
---
apiVersion: v1
kind: Pod
metadata:
  name: sample-ingress-apps-2
  labels:
    name: sample2
spec:
  containers:
  - name: nginx-containar
    image: nginx:1.15
    ports:
      - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: sample-ingress-default
spec:
  type: NodePort
  ports:
  - port: 8888
    targetPort: 80
    name: "http-port"
    protocol: "TCP"
  selector:
    ingress-app: default
---
apiVersion: v1
kind: Pod
metadata:
  name: sample-ingress-default
  labels:
    name: default
spec:
  containers:
  - name: nginx-containar
    image: nginx:1.15
    ports:
      - containerPort: 80
