part6/sample-lb-fw.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-lb-fw
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      name: "http-port"
      protocol: "TCP"
      targetPort: 80
  selector:
    app: sample-app
  loadBalancerSourceRanges:
    - 10.0.0.0/8
