part6/sample-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-lb
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      name: "http-port"
      protocol: "TCP"
      targetPort: 80
      nodePort: 30082
  selector:
    app: sample-app
