part6/sample-nodeport-local.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-nodeport-local
spec:
  type: NodePort
  externalTrafficPolicy: Local
  ports:
    - port: 8080
      targetPort: 80
      nodePort: 30081
      name: "http-port"
      protocol: "TCP"
  selector:
    app: sample-app
