part6/sample-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-nodeport
spec:
  type: NodePort
  ports:
    # ExternalIPとの違いは全てのKubernetes NodeのIPアドレス:Portで受診したトラフィックをコンテナに転送する
    - port: 8080
      targetPort: 80
      # 指定しなければ空いている番号が振られる、30000~32767
      nodePort: 30080
      protocol: "TCP"
      name: "http-port"
  selector:
    app: sample-app
